syntax = "proto3";

option java_package = "de.niklasbednarczyk.openweathermap.data.settings.proto.data";
option java_multiple_files = true;

message SettingsDataProto {

  enum LanguageProto {
    AFRIKAANS = 0;
    ALBANIAN = 1;
    ARABIC = 2;
    AZERBAIJANI = 3;
    BULGARIAN = 4;
    CATALAN = 5;
    CZECH = 6;
    DANISH = 7;
    GERMAN = 8;
    GREEK = 9;
    ENGLISH = 10;
    BASQUE = 11;
    PERSIAN_FARSI = 12;
    FINNISH = 13;
    FRENCH = 14;
    GALICIAN = 15;
    HEBREW = 16;
    HINDI = 17;
    CROATIAN = 18;
    HUNGARIAN = 19;
    INDONESIAN = 20;
    ITALIAN = 21;
    JAPANESE = 22;
    KOREAN = 23;
    LATVIAN = 24;
    LITHUANIAN = 25;
    MACEDONIAN = 26;
    NORWEGIAN = 27;
    DUTCH = 28;
    POLISH = 29;
    PORTUGUESE = 30;
    PORTUGUES_BRASIL = 31;
    ROMANIAN = 32;
    RUSSIAN = 33;
    SWEDISH = 34;
    SLOVAK = 35;
    SLOVENIAN = 36;
    SPANISH = 37;
    SERBIAN = 38;
    THAI = 39;
    TURKISH = 40;
    UKRAINIAN = 41;
    VIETNAMESE = 42;
    CHINESE_SIMPLIFIED = 43;
    CHINESE_TRADITIONAL = 44;
    ZULU = 45;
  }

  enum UnitsProto {
    STANDARD = 0;
    METRIC = 1;
    IMPERIAL = 2;
  }

  LanguageProto language = 1;
  UnitsProto units = 2;

}
